--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "react-waypoint": "^9.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0"
   }
